RESOLVED FIXED 255013
Speculative fix for crash mitigation in JSModuleRecord::instantiateDeclarations
https://bugs.webkit.org/show_bug.cgi?id=255013
Summary Speculative fix for crash mitigation in JSModuleRecord::instantiateDeclarations
Yijia Huang
Reported 2023-04-04 18:36:35 PDT
...
Attachments
Yijia Huang
Comment 1 2023-04-04 18:36:52 PDT
Yijia Huang
Comment 2 2023-04-04 18:38:43 PDT
EWS
Comment 3 2023-04-04 20:45:07 PDT
Committed 262608@main (79f077301b07): <https://commits.webkit.org/262608@main> Reviewed commits have been landed. Closing PR #12398 and removing active labels.
Mark Lam
Comment 4 2023-04-04 21:15:37 PDT
lsdsjy
Comment 5 2024-12-10 01:57:27 PST
Hi, I encountered the error "Importing module xxx is not found." in our project. Most of the devices experiencing this issue are running iOS 16.5/6/7. I found this commit in the WebKit repository; it seems that this error was a bug present in WebKit for a period of time. I would like to understand the cause of this error and how it was fixed, but my attempts to search the repository have been unsuccessful. I hope someone can provide some information to help us avoid similar issues in our production environment. Thanks!
Yijia Huang
Comment 6 2024-12-10 09:22:31 PST
Hi, could you please file another bugzilla with a repro case? Please include the detailed repro steps and configuration and system of the devices. Thanks.
lsdsjy
Comment 7 2024-12-11 00:42:51 PST
Hi, Thank you for your response. I want to provide some more context regarding the issue. The error "Importing module xxx is not found." occurs exclusively for users on iOS 16.5, 16.6, and 16.7. Based on our observations, approximately half of these users encounter the error during their visits. It's important to note that users on iOS 17 and above do not experience this error, suggesting that iOS 17 has either fixed or worked around the issue. I'm sorry that given the complexity of our project and recent significant changes, we are currently unable to provide a minimal reproducible demo without exposing sensitive business logic. If there are any related resources or documentation you could share, it would be greatly appreciated as we work to address this issue. Thank you for your understanding!
Note You need to log in before you can comment on or make changes to this bug.