Speculative fix for crash mitigation in JSModuleRecord::instantiateDeclarations https://bugs.webkit.org/show_bug.cgi?id=255013 rdar://107634974

Reviewed by Mark Lam.

This is a speculative fix to mitigate a crash in JSModuleRecord::instantiateDeclarations
which is due to an undefined imported module. However, the existing implementation
should already handle the undefined case by throwing and catching an exception when
encountering an undefined JSValue. This patch ensures that the target pointer will not
have the undefined value. If it does, we'll throw an exception.

* Source/JavaScriptCore/runtime/JSModuleRecord.cpp:
(JSC::JSModuleRecord::instantiateDeclarations):

Canonical link: https://commits.webkit.org/262608@main